2017-02-27  Ray Brown  <code@liquibits.com>

	* dtls/openssl.py: support reading directly into given buffer instead of forcing buffer copy (for ssl module compatibility)
	* dtls/sslconnection.py: in-situ receive support, as above
	* dtls/patch.py: various changes for compatibility with the ssl module of Python 2.7.12; note that the ssl module's new SSLContext is not supported
	* dtls/test/unit.py: changes to support the updated ssl module, including fix of deprecation warnings
	* setup.py: increase version to 1.0.2

2014-01-18  Ray Brown  <code@liquibits.com>

	* setup.py: Increase version to 1.0.1 for release to PyPI

2014-01-18  Jayson Vantuyl  <kagato@souja.net>

	* sslconnection.py: fix missing error code import

2014-01-18  Ray Brown  <code@liquibits.com>

	* setup.py: First stable version, 1.0.0
	* dtls/test/makecerts: Generate valid and current certificates for
	unit test suite
	* dtls/test/openssl_ca.cnf: Configuration file for CA certificate
	* dtls/test/openssl_server.cnf: Configuration file for server
	certificate
	* dtls/test/certs/ca-cert.pem: updated certificate, valid for 10 years
	* dtls/test/certs/server-cert.pem: updated certificate, valid for
	10 years
	* dtls/test/certs/keycert.pem: updated server certificate from server-cert.pem, along with that certificate's private key
	* dtls/test/server-key.pem: deleted (it was not needed)

2012-12-31  Ray Brown  <code@liquibits.com>

	* All: Version 0.1.0: initial public release